--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ archives_base_name=sodium-forge
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
 databreaker_version = 0.2.4
+
+# FTB-Chunks
+ftb_chunks_version=1.1.2.36
