Fix Nether Portal crash Fix packet size error when writing Strings to PacketBuffer Update mappings to 1.16.5 snapshot 20200309, and updated SRG names Remove usage of FTBChunks since I can't figure out how to import it correctly :(

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ use_third_party_mods = true
 databreaker_version = 0.2.4
 
 # FTB-Chunks
-ftb_chunks_version=1.1.2.36
+ftb_chunks_version=1605.2.3-build.75
