--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      - name: Upload assets to CurseForge
+      - name: Build artifacts
         run: ./gradlew build
         env:
           BUILD_RELEASE: ${{ github.event.prerelease == false }}
