--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ buildscript {
         classpath "io.freefair.gradle:lombok-plugin:6.0.0-m2"
     }
 }
+
+plugins {
+    id 'org.ajoberstar.grgit' version '4.1.0'
+}
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: "io.freefair.lombok"
@@ -26,7 +31,7 @@ repositories {
     }
 }
 
-version = mod_version
+version = "${project.mod_version}+${getVersionMetadata()}"
 group = 'me.jellysquid.mods.sodium' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'sodium-forge'
 
@@ -180,4 +185,28 @@ publishing {
             url "file:///${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+def getVersionMetadata() {
+    def build_id = System.getenv("GITHUB_RUN_NUMBER")
+
+    // CI builds only
+    if (build_id != null) {
+        return "build.${build_id}"
+    }
+
+    if (grgit != null) {
+        def head = grgit.head()
+        def id = head.abbreviatedId
+
+        // Flag the build if the build tree is not clean
+        if (!grgit.status().clean) {
+            id += "-dirty"
+        }
+
+        return "rev.${id}"
+    }
+
+    // No tracking information could be found about the build
+    return "unknown"
 }
