--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="sodium" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="${file.jarVersion}" #mandatory
  # A display name for the mod
-displayName="SodiumoPhosphoroLithium" #mandatory
+displayName="SodiumReforged" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
@@ -29,7 +29,7 @@ logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
 credits="hanetzer" #optional
 # A text field displayed in the mod UI
-authors="JellySquid, Pannoniae and somewhat yatsukiko" #optional
+authors="JellySquid, Pannoniae and somewhat yatsukiko, and now spoorn" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Sodium is a free and open-source optimization mod for Minecraft which improves frame rates and reduces lag spikes.
