--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,15 +8,6 @@ public net.minecraft.client.renderer.texture.TextureAtlasSprite$InterpolationDat
 public net.minecraft.client.renderer.culling.ClippingHelper func_228953_a_(DDDDDD)Z # isBoxInFrustum
 
 # phosphor
-public net.minecraft.block.AbstractBlock$AbstractBlockState$Cache
-public net.minecraft.world.chunk.ChunkStatus$IGenerationWorker
-public net.minecraft.world.chunk.ChunkStatus$ILoadingWorker
-
-public net.minecraft.world.server.ServerWorldLightManager$Phase
-
-public net.minecraft.world.lighting.SectionLightStorage func_215518_g(J)Z # hasSection
-public net.minecraft.world.lighting.SkyLightStorage func_215551_l(J)Z
-public net.minecraft.world.lighting.SkyLightStorage func_215550_a(I)Z # isAboveBottom
 
 # lithium
 public net.minecraft.util.math.shapes.VoxelShape <init>(Lnet/minecraft/util/math/shapes/VoxelShapePart;)V
@@ -53,3 +44,40 @@ public net.minecraft.entity.Entity func_233567_aH_()V # updateWaterState
 public net.minecraft.util.math.shapes.VoxelShape field_197768_g # part
 
 #public me.jellysquid.mods.sodium.mixin.world.block_entity_ticking.WorldMixin getPendingBlockEntity(Lnet/minecraft/util/math/BlockPos;)Lnet/minecraft/tileentity/TileEntity
+
+#starlight
+
+# AbstractBlockState
+public net.minecraft.block.AbstractBlock$AbstractBlockState$Cache
+
+
+# AbstractBlockState.Cache
+public net.minecraft.block.AbstractBlock$AbstractBlockState$Cache field_222501_e #opacity
+
+
+# ChunkSection
+public net.minecraft.world.chunk.ChunkSection field_177488_d #data
+
+
+# PalettedContainer
+public net.minecraft.util.palette.PalettedContainer func_186015_a(I)Ljava/lang/Object; #get
+
+
+# ChunkManager
+public net.minecraft.world.server.ChunkManager field_219255_i #world
+public net.minecraft.world.server.ChunkManager field_219257_k #mainThread
+
+public net.minecraft.world.server.ChunkManager func_219220_a(J)Lnet/minecraft/world/server/ChunkHolder; #func_219220_a
+public net.minecraft.world.server.ChunkManager func_219219_b(J)Lnet/minecraft/world/server/ChunkHolder; #func_219219_b
+public net.minecraft.world.server.ChunkManager func_219191_c(J)Ljava/util/function/IntSupplier; #func_219191_c
+public net.minecraft.world.server.ChunkManager func_219209_c(Lnet/minecraft/util/math/ChunkPos;)V #func_219209_c
+
+# ChunkHolder
+public net.minecraft.world.server.ChunkHolder field_219315_j # chunkToSave
+
+# WorldLightManager
+private-f net.minecraft.world.lighting.WorldLightManager blockLight
+private-f net.minecraft.world.lighting.WorldLightManager skyLight
+
+# ServerWorldLightManager
+public net.minecraft.world.server.ServerWorldLightManager$Phase
