--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://maven.minecraftforge.net' }
         jcenter()
         mavenCentral()
-        maven {url='https://repo.spongepowered.org/maven'}
+        //maven {url='https://repo.spongepowered.org/repository/maven-public'}
+        //maven {url='https://repo.spongepowered.org/repository/maven-snapshots'}
         maven {
             url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        //classpath 'gradle.plugin.org.spongepowered:spongegradle:0.9.0'
+        //classpath 'org.spongepowered:mixin:0.8.3-SNAPSHOT'
         classpath "io.freefair.gradle:lombok-plugin:6.0.0-m2"
     }
 }
@@ -19,23 +21,29 @@ plugins {
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
+/*plugins {
+    id "org.spongepowered.plugin" version "0.9.0"
+}*/
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: "io.freefair.lombok"
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+//apply plugin: 'org.spongepowered.plugin'
 repositories {
     maven {
         name "LatvianModder"
         url "https://maven.latmod.com"
     }
+    maven {url='https://repo.spongepowered.org/repository/maven-public'}
 }
 
 version = "${project.mod_version}+${getVersionMetadata()}"
 group = 'me.jellysquid.mods.sodium' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'sodium-forge'
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '16' // Need this here so eclipse task generates correctly.
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
@@ -44,7 +52,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20210309-1.16.5'
+    mappings channel: 'official', version: '1.17.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     //refmapName = "mixins.sodium.refmap.json"
@@ -111,11 +119,12 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.24'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.12'
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
+    compileOnly 'org.spongepowered:mixin:0.8.3-SNAPSHOT'
 
     // Real examples
     // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
@@ -137,7 +146,7 @@ dependencies {
         transitive = false
     })*/
 
-    annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
+    annotationProcessor 'org.spongepowered:mixin:0.8.3:processor'
 }
 
 afterEvaluate {
@@ -150,29 +159,33 @@ afterEvaluate {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "sodium",
-            //"Specification-Vendor": "examplemodsareus",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            //"Implementation-Vendor" :"examplemodsareus",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConfigs": "sodium.mixins.json"
+                "Specification-Title": "sodium",
+                //"Specification-Vendor": "examplemodsareus",
+                "Specification-Version": "1", // We are version 1 of ourselves
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${version}",
+                //"Implementation-Vendor" :"examplemodsareus",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs": "sodium.mixins.json"
         ])
     }
 }
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
-apply plugin: 'org.spongepowered.mixin'
-
-mixin {
-    add sourceSets.main, "sodium.refmap.json"
+sourceSets {
+    main {
+        ext.refMap = "sodium.refmap.json"
+    }
 }
+
+/*mixin {
+    add sourceSets.main, "sodium.refmap.json"
+}*/
 
 publishing {
     publications {
