--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ archives_base_name=sodiumolithiumophosphor-forge
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
 databreaker_version = 0.2.4
+flywheel_version = 1.16-0.2.3.48
 
 # FTB-Chunks
 ftb_chunks_version=1605.2.3-build.75
