Fix errors causing minecraft to not load.  Forge now supports Sponge Mixins.  Currently, the world won't be rendered because Minecraft 1.17 updated to OpenGL 3.2 Core which deprecated QUADS as a primitive type, and we are still using QUADS.  Need to pull in Sodium updates

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -61,3 +61,5 @@ public net.minecraft.client.gui.screens.Screen f_96540_ # children field
 
 public net.minecraft.client.CycleOption f_90678_ # setter
 public net.minecraft.client.CycleOption f_167713_ # getter
+
+public net.minecraft.client.gui.screens.OptionsSubScreen f_96281_ # lastScreen
